Edited wiki page googleCode through web user interface.

--- a/wiki/googleCode.wiki
+++ b/wiki/googleCode.wiki
@@ -1,3 +1,4 @@
 #summary การลงทะเบียนใช้งาน google code
 
 = การลงทะเบียนใช้งาน google code =
+<img src="https://sdm53124.googlecode.com/issues/attachment?aid=10000000&name=Untitled.png&token=hHQxDXQ3sczuu2VbR1V7EhYRGbg%3A1379410423665&inline=1" width='500' height='300'/>
