--- a/wiki/googleCode.wiki
+++ b/wiki/googleCode.wiki
@@ -1,4 +1,12 @@
 #summary การลงทะเบียนใช้งาน google code
 
 = การลงทะเบียนใช้งาน google code =
+เริ่มต้นจากการที่เราต้องมีชื่อผู้ใช้ของ Google ก่อนซึ่งสามารถสมัครได้ฟรีที่ gmail.com
+1. ชื่อผู้ใช้ (ชื่อผู้ใช้ ไม่ต้องตามด้วย @gmail.com)
+2. รหัสผ่านของการเข้าใช้ (Password of session) เป็นหมายเลขที่เราสามารถดูได้หลังจาก login เข้าใช้ gmail จากนั้นไปที่url ต่อไปนี้ https://code.google.com/hosting/settings ดังรูปที่ 1
+3. รหัสผ่านสาหรับ SVN จะเป็นส่วนที่ได้จากขั้นตอนด้านบนเพื่อนาไปใช้กับโปรแกรม SVN Client
+
+
 <img src="https://sdm53124.googlecode.com/issues/attachment?aid=10000000&name=Untitled.png&token=hHQxDXQ3sczuu2VbR1V7EhYRGbg%3A1379410423665&inline=1" width='500' height='300'/>
+
+รูปที่ 1
