--- a/wiki/googleCode.wiki
+++ b/wiki/googleCode.wiki
@@ -22,3 +22,4 @@ SVN Server
 2. เมื่อทาการ login เรียบร้อยแล้วให้คลิก “Create a project”
 หากยังไม่ login คลิกเพื่อ login
 3. ถัดมาจะต้องเริ่มให้ข้อมูลโครงการว่ามีรายละเอียดอย่างไรดังรูปที่ 3
+<img src="https://sdm53124.googlecode.com/issues/attachment?aid=10001000&name=21.png&token=Ffu74FECZYoP3E0o_5t6Tl2QKAM%3A1379411093028&inline=1" width='500' height='300'/>
