--- a/wiki/googleCode.wiki
+++ b/wiki/googleCode.wiki
@@ -2,6 +2,7 @@
 
 = การลงทะเบียนใช้งาน google code =
 เริ่มต้นจากการที่เราต้องมีชื่อผู้ใช้ของ Google ก่อนซึ่งสามารถสมัครได้ฟรีที่ gmail.com
+
 1. ชื่อผู้ใช้ (ชื่อผู้ใช้ ไม่ต้องตามด้วย @gmail.com)
 
 2. รหัสผ่านของการเข้าใช้ (Password of session) เป็นหมายเลขที่เราสามารถดูได้หลังจาก login เข้าใช้ gmail จากนั้นไปที่url ต่อไปนี้ https://code.google.com/hosting/settings ดังรูปที่ 1
@@ -21,7 +22,7 @@ SVN Server
 
 มาเริ่มตั้งแต่ส่วนแรกกันจะเป็นการขอใช้งาน Google Code SVN Server ซึ่งจะต้องมีชื่อผู้ใช้งานอยู่ดังที่กล่าวไว้แล้ว จากนั้นมาสร้าง project 
 
-1. ไปที่ url ต่อไปนี้เพื่อเริ่มต้นการสร้าง project บน Google Code http://code.google.com/hosting/ ดังรูปปที่ 2
+1. ไปที่ url ต่อไปนี้เพื่อเริ่มต้นการสร้าง project บน Google Code http://code.google.com/hosting/ ดังรูปที่ 2
 <img src="https://sdm53124.googlecode.com/issues/attachment?aid=10001000&name=21.png&token=Ffu74FECZYoP3E0o_5t6Tl2QKAM%3A1379411093028&inline=1" width='500' height='300'/>
                                  
                                 รูปที่ 2
