Edited wiki page googleCode through web user interface.

--- a/wiki/googleCode.wiki
+++ b/wiki/googleCode.wiki
@@ -5,9 +5,9 @@
 
 1. ชื่อผู้ใช้ (ชื่อผู้ใช้ ไม่ต้องตามด้วย @gmail.com)
 
-2. รหัสผ่านของการเข้าใช้ (Password of session) เป็นหมายเลขที่เราสามารถดูได้หลังจาก login เข้าใช้ gmail จากนั้นไปที่url ต่อไปนี้ https://code.google.com/hosting/settings ดังรูปที่ 1
+2. รหัสผ่านของการเข้าใช้ (Password of session) เป็นหมายเลขที่เราสามารถดูได้หลังจาก login เข้าใช้ gmail จากนั้นไปที่ url ต่อไปนี้ https://code.google.com/hosting/settings ดังรูปที่ 1
 
-3. รหัสผ่านสาหรับ SVN จะเป็นส่วนที่ได้จากขั้นตอนด้านบนเพื่อนาไปใช้กับโปรแกรม SVN Client
+3. รหัสผ่านสำหรับ SVN จะเป็นส่วนที่ได้จากขั้นตอนด้านบนเพื่อนำไปใช้กับโปรแกรม SVN Client
 
 
 
@@ -16,7 +16,7 @@
 
                                   รูปที่ 1
 
-การใช้งานจะต้องดาเนินการ 2 ส่วนคือ
+การใช้งานจะต้องดำเนินการ 2 ส่วนคือ
   1. ส่วน SVN Server ใช้ Google Code SVN Server
  
   2. ส่วน SVN Client ใช้งาน TortoiseSVN
@@ -33,7 +33,7 @@ SVN Server
                                  
                                 รูปที่ 2
 
-2. เมื่อทาการ login เรียบร้อยแล้วให้คลิก “Create a project”
+2. เมื่อทำการ login เรียบร้อยแล้วให้คลิก “Create a project”
 หากยังไม่ login คลิกเพื่อ login
 
 3. ถัดมาจะต้องเริ่มให้ข้อมูลโครงการว่ามีรายละเอียดอย่างไรดังรูปที่ 3
@@ -43,7 +43,7 @@ SVN Server
 
 4. เมื่อทาการกรอกรายละเอียดเรียบร้อยแล้ว กด Create project
 
-5. เราก็จะได้ project ที่จะใช้ในการทางานบน Google Code SVN Server แล้วดังรูปที่ 4
+5. เราก็จะได้ project ที่จะใช้ในการทำงานบน Google Code SVN Server แล้วดังรูปที่ 4
 
 
 
