--- a/wiki/SVN.wiki
+++ b/wiki/SVN.wiki
@@ -1,19 +1,26 @@
-#การติดตั้ง SVN บน Eclipse
+#summary การติดตั้ง SVN บน Eclipse
 
 =การติดตั้ง SVN บน Eclipse=
 
  มีขั้นตอนดังต่อไปนี้:
 
-  1.เปิด eclipse
+  1.เปิด Eclipse
 
   2.เลือก Help ---> Install New Software
-    ตรงหน้าต่าง Available Software
-    ตรง work with เลือก http://download.eclipse.org/release/รุ่น
+    จะปรากฏหน้าต่าง Install Available Software
+    ในช่อง work with เลือก http://download.eclipse.org/release/รุ่น
 
   3.เลือกรายการ collaboration
 
-  4.เลือกรายการ Subversive SVN Team provider
-    ตอบ Next เพื่อเริ่มกระบวนการติดตั้ง
-    ตอบ accept เพื่อยอมรับ opensource license
+  4.เลือกรายการย่อย Subversive SVN Team provider
+  
+  5.คลิกที่ Next
+
+  6.คลิกที่ Next เพื่อเริ่มกระบวนการติดตั้ง
+    
+  7.เลือก I accept เพื่อยอมรับ opensource license
+
+  8.คลิกที่ finish
+
     
     จากนั้นรอจนกว่าจะติดตั้งเสร็จสิ้น แล้ว restart eclipse ใหม่อีกครั้ง ซึ่งถือว่าเป็นอันเสร็จขั้นตอนของการติดตั้ง SVN บน eclipse
