Edited wiki page PageName through web user interface.

--- a/wiki/PageName.wiki
+++ b/wiki/PageName.wiki
@@ -1,7 +1,7 @@
 #summary สนุกมากเลยฉันที่ได้แกล้งเธอ
 = สนุกมากมายเลย =
 
-การแกล้งมันสนุกมาก
+== การแกล้งมันสนุกมาก ==
 
 
 = ฉันชื่อแอะดา    อยู่เอกเกษตรบูรณาการ =
