Edited wiki page Upload through web user interface.

--- a/wiki/Upload.wiki
+++ b/wiki/Upload.wiki
@@ -3,6 +3,8 @@
 = การดาวน์โหวดไฟล์(Download) =
 
 1.คลิกที่ Download
+
+image=https://sdm53124.googlecode.com/svn/331.png
 2.คลิกที่ New download
 3.กรอกรายละเอียดดังนี้
 
