Edited wiki page Upload through web user interface.

--- a/wiki/Upload.wiki
+++ b/wiki/Upload.wiki
@@ -8,6 +8,8 @@
 
 2.คลิกที่ New download
 
+<img src="https://sdm53124.googlecode.com/svn/32.png"/>
+
 3.กรอกรายละเอียดดังนี้
 
  Summary : กำหนดชื่อ
