Edited wiki page Upload through web user interface.

--- a/wiki/Upload.wiki
+++ b/wiki/Upload.wiki
@@ -17,3 +17,4 @@
  File : คลิกเพื่อทำการเลือกไฟล์ที่ต้องการอัปโหลด
 
 4.คลิกที่ปุ่ม Submit file
+<img src="https://sdm53124.googlecode.com/svn/33.png"/>
