Edited wiki page Upload through web user interface.

--- a/wiki/Upload.wiki
+++ b/wiki/Upload.wiki
@@ -22,9 +22,19 @@
 
 = การลบไฟล์(Delete) =
 
-1. เลือกไฟล์ที่จะทำการลบ
+1.เลือกไฟล์ที่จะทำการลบ
+
 <img src="https://sdm53124.googlecode.com/svn/41.png"/>
  
-2. คลิกที่ Delete download
+2.คลิกที่ Delete download
 
 <img src="https://sdm53124.googlecode.com/svn/42.png"/>
+
+= การแก้ไขรายละเอียดของไฟล์(Edit) =
+
+1.เลือกไฟล์ที่จะทำการลบ
+
+2.แก้ไขรายละเอียดตามต้องการ
+
+*หมายเหตุ* โดยที่สามารถแก้ไข ชื่อและรายละเอียดของไฟล์เท่านั้น 
+3.คลิ๊กปุ่ม Save changes
