--- a/wiki/Upload.wiki
+++ b/wiki/Upload.wiki
@@ -38,3 +38,7 @@
 
 *หมายเหตุ* โดยที่สามารถแก้ไข ชื่อและรายละเอียดของไฟล์เท่านั้น 
 3.คลิ๊กปุ่ม Save changes
+
+4.มีกล่องข้อความแสดงเตือน เพื่อยืนยันการแก้ไข เลือกคลิก OK
+
+<img src="https://sdm53124.googlecode.com/svn/45.png"/>
