Edited wiki page Upload through web user interface.

--- a/wiki/Upload.wiki
+++ b/wiki/Upload.wiki
@@ -36,8 +36,11 @@
 
 2.แก้ไขรายละเอียดตามต้องการ
 
-*หมายเหตุ* โดยที่สามารถแก้ไข ชื่อและรายละเอียดของไฟล์เท่านั้น 
+*หมายเหตุ* โดยที่สามารถแก้ไข ชื่อและรายละเอียดของไฟล์เท่านั้น
+ 
 3.คลิ๊กปุ่ม Save changes
+
+<img scr="https://sdm53124.googlecode.com/svn/44.png"/>
 
 4.มีกล่องข้อความแสดงเตือน เพื่อยืนยันการแก้ไข เลือกคลิก OK
 
