Edited wiki page Management through web user interface.

--- a/wiki/Management.wiki
+++ b/wiki/Management.wiki
@@ -6,10 +6,11 @@
 
 2.เลือกที่ People
 
-3.เลือกที่ Add member เพื่อเพิ่มรายชื่อผู้ใช้
+3.เลือกที่ Add member 
+
+
 
 4.กรอก E-mail ของผู้ใช้ที่จะเพิ่ม ซึ่งเป็นอีเมลล์ที่สามารถเข้าใช้ google code ได้
-
 
 5.เลือกที่ Role เพื่อกำหนดสิทธ์ให้กับผู้ใช้ โดยสิทธ์มีดังนี้
 
@@ -18,3 +19,5 @@
   Committer : มีสิทธิ์ในการจัดการโปรเจ็กต์ แต่ไม่สิทธิ์ในการกำหนดค่าต่างๆ
 
   Contributor : ไม่มีสิทธิ์ในการจัดการโปรเจ็กต์ เหมือนกับผู็ที่ไม่เป็นสามาชิก
+
+6.เลือกที่ Add member เพื่อเพิ่มรายชื่อผู้ใช้
