Edited wiki page Management through web user interface.

--- a/wiki/Management.wiki
+++ b/wiki/Management.wiki
@@ -36,6 +36,19 @@
 
 4.เลือกที่ Remove member เพื่อลบผู้ใช้ออก
  
-  จะแสดงข้อความว่าลบผู้ใช้ออกแล้ว 
+  จะแสดงข้อความการเปลี่ยนแปลง 
 
 <img src="https://sdm53124.googlecode.com/svn/56.png"/>
+
+= การเปลี่ยนแปลงแก้ไขสิทธิ์ =
+
+
+1.เลือกที่ Project Home
+
+2.เลือกที่ People
+
+3.เลือกที่สมาชิกที่ต้องการแก้ไขสิทธิ์
+
+4.เลือกที่ Role เพื่อต้องการแก้ไขสิทธิ์
+
+5.เลือกที่ Save changes 
