Edited wiki page ManagementTrem through web user interface.

--- a/wiki/ManagementTrem.wiki
+++ b/wiki/ManagementTrem.wiki
@@ -2,7 +2,21 @@
 
 = การ Check out =
 
+1.คลิกขวาที่โปรเจ็กต์
+
+2.เลือกที่ Checkout
+
 = การ Commit =
+
+1.คลิกขวาที่โปรเจ็กต์ 
+
+2.เลือกที่ Team 
+
+3.เลือกที่ Commit
+
+4.กรอกรายละเอียดการแก้ไขในช่อง Comment 
+
+5.คลิก OK
 
 = การ Update =
 
