Edited wiki page ManagementTrem through web user interface.

--- a/wiki/ManagementTrem.wiki
+++ b/wiki/ManagementTrem.wiki
@@ -28,4 +28,12 @@
 
 = การ Compare =
 
+1.คลิกขวาที่โปรเจ็กต์
+
+2.เลือกที่ Compare With 
+
+3.เลือกที่ Latest from Repository
+
+4.แสดงการเปรียบเทียบข้อมูลทั้งสอง 
+
 = การ Revert =
