Edited wiki page googleCode through web user interface.

--- a/wiki/googleCode.wiki
+++ b/wiki/googleCode.wiki
@@ -2,6 +2,7 @@
 
 = การลงทะเบียนใช้งาน google code =
 เริ่มต้นจากการที่เราต้องมีชื่อผู้ใช้ของ Google ก่อนซึ่งสามารถสมัครได้ฟรีที่ gmail.com
+<img src="https://sdm53124.googlecode.com/svn/42.png"/>
 
 1. ชื่อผู้ใช้ (ชื่อผู้ใช้ ไม่ต้องตามด้วย @gmail.com)
 
