--- a/wiki/googleCode.wiki
+++ b/wiki/googleCode.wiki
@@ -1,53 +1,9 @@
 #summary การลงทะเบียนใช้งาน google code
 
 = การลงทะเบียนใช้งาน google code =
-เริ่มต้นจากการที่เราต้องมีชื่อผู้ใช้ของ Google ก่อนซึ่งสามารถสมัครได้ฟรีที่ gmail.com
-<img src="https://sdm53124.googlecode.com/svn/22.png"/>
 
-1. ชื่อผู้ใช้ (ชื่อผู้ใช้ ไม่ต้องตามด้วย @gmail.com)
+1. ต้องสมัคร E-Mail ของ Google หรือ Gmailก่อน
 
-2. รหัสผ่านของการเข้าใช้ (Password of session) เป็นหมายเลขที่เราสามารถดูได้หลังจาก login เข้าใช้ gmail จากนั้นไปที่ url ต่อไปนี้ https://code.google.com/hosting/settings ดังรูปที่ 1
+2. เข้าที่ไปใน URL http://code.google.com
 
-3. รหัสผ่านสำหรับ SVN จะเป็นส่วนที่ได้จากขั้นตอนด้านบนเพื่อนำไปใช้กับโปรแกรม SVN Client
-
-
-
-
-<img src="https://sdm53124.googlecode.com/issues/attachment?aid=10000000&name=Untitled.png&token=hHQxDXQ3sczuu2VbR1V7EhYRGbg%3A1379410423665&inline=1" width='500' height='300'/>
-
-                                  รูปที่ 1
-
-การใช้งานจะต้องดำเนินการ 2 ส่วนคือ
-  1. ส่วน SVN Server ใช้ Google Code SVN Server
- 
-  2. ส่วน SVN Client ใช้งาน TortoiseSVN
-SVN Server
-
-มาเริ่มตั้งแต่ส่วนแรกกันจะเป็นการขอใช้งาน Google Code SVN Server ซึ่งจะต้องมีชื่อผู้ใช้งานอยู่ดังที่กล่าวไว้แล้ว จากนั้นมาสร้าง project 
-
-1. ไปที่ url ต่อไปนี้เพื่อเริ่มต้นการสร้าง project บน Google Code http://code.google.com/hosting/ ดังรูปที่ 2
-
-
-
-
-<img src="https://sdm53124.googlecode.com/issues/attachment?aid=10001000&name=21.png&token=Ffu74FECZYoP3E0o_5t6Tl2QKAM%3A1379411093028&inline=1" width='500' height='300'/>
-                                 
-                                รูปที่ 2
-
-2. เมื่อทำการ login เรียบร้อยแล้วให้คลิก “Create a project”
-หากยังไม่ login คลิกเพื่อ login
-
-3. ถัดมาจะต้องเริ่มให้ข้อมูลโครงการว่ามีรายละเอียดอย่างไรดังรูปที่ 3
-<img src="https://sdm53124.googlecode.com/issues/attachment?aid=10002000&name=22.png&token=DyO3DIU3bABFAHdYz7BvLNYxlfE%3A1379411477238&inline=1" width='500' height='300'/>
-
-                                  รูปที่ 3
-
-4. เมื่อทาการกรอกรายละเอียดเรียบร้อยแล้ว กด Create project
-
-5. เราก็จะได้ project ที่จะใช้ในการทำงานบน Google Code SVN Server แล้วดังรูปที่ 4
-
-
-
-<img src="https://sdm53124.googlecode.com/issues/attachment?aid=20000000&name=23.png&token=zq6WFNgivVP8B35k7mYVga9Xv54%3A1379412119688&inline=1" width='500' height='300'/>
-                                 
-                                   ดังรูปที่ 4
+3. Sign in ด้วย E-Mail ของเราที่เป็นของ Google
