Edited wiki page googleCode through web user interface.

--- a/wiki/googleCode.wiki
+++ b/wiki/googleCode.wiki
@@ -6,6 +6,6 @@
 
 2. เข้าที่ไปใน URL http://code.google.com
 
-<img src=""/>
+<img src="https://sdm53124.googlecode.com/svn/88.png"/>
 
 3. Sign in ด้วย E-Mail ของเราที่เป็นของ Google
