Edited wiki page googleCode through web user interface.

--- a/wiki/googleCode.wiki
+++ b/wiki/googleCode.wiki
@@ -13,3 +13,5 @@
 <img src="https://sdm53124.googlecode.com/svn/89.png"/>
 
 3.เข้าสู่หน้า google code
+
+<img src="https://sdm53124.googlecode.com/svn/87.png"/>
