--- a/wiki/SVN.wiki
+++ b/wiki/SVN.wiki
@@ -11,14 +11,24 @@
    <img src="https://sdm53124.googlecode.com/svn/5.png"/>
 
   3.เลือกที่ Install New Software
+
+   <img src="https://sdm53124.googlecode.com/svn/6.png"/>
     จะปรากฏหน้าต่าง Install Available Software
     ในช่อง work with เลือก http://download.eclipse.org/release/รุ่น
 
+   <img src="https://sdm53124.googlecode.com/svn/7.png"/>
+
   4.เลือกรายการ collaboration
+
+  <img src="https://sdm53124.googlecode.com/svn/8.png"/>
 
   5.เลือกรายการย่อย Subversive SVN Team provider
   
+  <img src="https://sdm53124.googlecode.com/svn/9.png"/>
+  
   6.คลิกที่ Next
+ 
+  <img src="https://sdm53124.googlecode.com/svn/10.png"/>
 
   7.คลิกที่ Next เพื่อเริ่มกระบวนการติดตั้ง
     
