--- a/wiki/Share.wiki
+++ b/wiki/Share.wiki
@@ -6,11 +6,17 @@
 
 2.เลือกที่ Team 
 
+<img src="https://sdm53124.googlecode.com/svn/15.png"/>
+
 3.เลือกที่ Share Project
+
+<img src="https://sdm53124.googlecode.com/svn/16.png"/>
 
 4.เลือกที่ Create a new repository location 
 
 5.เลือกที่ Finish
+
+
 
 6.กรอกรายละเอียดการ Share Project ผ่าน SVN
 
