--- a/wiki/Interesting.wiki
+++ b/wiki/Interesting.wiki
@@ -1,13 +1,59 @@
-#summary การจัดเก็บข้อมูล(หัวข้อที่น่าสนใจ.
+#summary การจัดเก็บข้อมูล(หัวข้อที่น่าสนใจ).
 
 = การจัดเก็บข้อมูล =
 
-Add your content here.
+*SVN Client*
+
+     เริ่มจากเลือกใช้งาน SVN Client ที่ต้องการ ในที่นี้แนะนาโปรแกรมที่ชื่อ TortoiseSVN
+
+โดยสามารถดาว์นโหลดได้ที่ลิงค์นี้ http://tortoisesvn.net/downloads
+
+หลังจากติดตั้งเสร็จแล้วมาทดลองใช้ Google SVN Server ผ่าน SVN Client 
+
+1.เริ่มจากสร้างไดเรคทอรีสาหรับเก็บข้อมูลของโครงการที่ทาบนเครื่องเสร็จแล้วคลิกขวาเลือกเมนู SVN 
+
+Checkout.. ดังรูปที่
+
+2.จะปรากฏหน้าต่างใหม่ขึ้นมาโดย TortoiseSVN จะถาม url ที่อยู่ของ SVN Server ในที่นี้เราได้
+
+สร้างไว้แล้วในขั้นตอน Server นั้นคือ 
+
+https://roboticlabsim.googlecode.com/svn/trunk/ จะเห็นว่าชื่อที่อยู่หน้า 
+
+googlecode.com คือชื่อโครงการของเราที่ตั้งไว้ในตอนแรกนั้นเอง ส่วนอีกช่องที่เป็น Checkout 
+
+directory ให้ใส่ไดเรคทอรีที่ใช้เก็บขอมูลบนเครื่องดังรูป เสร็จแล้วคลิก OK
+
+3.ในกรณีที่หน่วยงานหรือองค์กรมีระบบ firewall proxy ให้ทำการตั้งค่า proxy server ได้ที่เมนู
+
+ Setting->Network ก่อนที่จะทำการ checkout 
+
+4.จากข้อที่ 2 เมื่อใส่ค่าต่าง ๆ เรียบร้อยแล้วเลือก OK จะมีหน้าต่างใหม่ขึ้นมาถามชื่อผู้ใช้กับรหัสผ่าน 
+
+5.เมื่อ checkout เสร็จแล้วคราวนี้ไดเรคทอรีของเราก็พร้อมใช้แล้ว มาทดลองเพิ่มไฟล์
+
+ สามารถเพิ่มได้ทั้งไฟล์และไดเรคทอรีดังรูป ทำการเพิ่มไฟล์
+
+6.เมื่อเพิ่มไฟล์ในข้อ 5 แล้วตอนนี้ไฟล์ยังไม่ได้ถูกส่งไปเก็บที่ SVN Server จนกว่าเราจะสั่ง 
+
+commit… ดังรูป ซึ่งจะเป็นการส่งข้อมูลไปเก็บยัง Server พร้อมทั้งมีการตรวจสอบว่ามีการซ้ำซ้อนหรือไม่
+
+หากมีอยู่แล้วและมีการเปลี่ยนแปลงไฟล์ ก็จะทำการสร้างเป็นรุ่นใหม่พร้อมกับมีประวัติการเปลียนแปลงให้เรา
+
+เขียนอธิบายด้วย ดังในรูปที่
 
 
-= Details =
 
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+จะมีการถาม user และ password อีกครั้ง
+
+7.เสร็จเรียบร้อยสำหรับ การเพิ่ม คราวนี้เราก็จะสามารถพัฒนาหรือใช้งานเอกสารของเราได้โดยไม่ต้อง
+
+กังวลว่าไฟล์แต่ละรุ่นที่มีการแก้ไขจะทับหรือเสียหาย เพียงแต่ทุกครั้งที่เราแก้ไขไฟล์ใด ๆ ก็อย่าลืม 
+
+commit ไปเก็บไว้บน Server และหากต้องการกู้คือก็สามารถทำได้ ทุกรุ่นที่เราได้ commit ไว้แต่ละ
+
+ครั้งของการเปลี่ยนแปลง ตัว SVN Client ที่แนะนำ
+
+8.กรณีที่ท่านใช้งานบนเครื่องที่มีการใช้งานมากกว่าหนึ่งคน ขอแนะนำให้ทำการลบข้อมูล user และ 
+
+password ก่อนเลิกใช้งานทุกครั้งทำได้ดังนี้ SVN->Setting
