--- a/wiki/ManagementTrem.wiki
+++ b/wiki/ManagementTrem.wiki
@@ -40,6 +40,8 @@
 
 3.เลือกที่ Latest from Repository
 
+ <img src="https://sdm53124.googlecode.com/svn/502.png"/>
+
 4.แสดงการเปรียบเทียบข้อมูลทั้งสอง 
 
 = การ Revert =
