Edited wiki page ManagementTrem through web user interface.

--- a/wiki/ManagementTrem.wiki
+++ b/wiki/ManagementTrem.wiki
@@ -44,6 +44,8 @@
 
 4.แสดงการเปรียบเทียบข้อมูลทั้งสอง 
 
+<img src="https://sdm53124.googlecode.com/svn/503.png"/>
+
 = การ Revert =
 
 1.คลิกขวาที่โปรเจ็กต์
