Edited wiki page Interesting through web user interface.

--- a/wiki/Interesting.wiki
+++ b/wiki/Interesting.wiki
@@ -4,15 +4,15 @@
 
 *SVN Client*
 
-     เริ่มจากเลือกใช้งาน SVN Client ที่ต้องการ ในที่นี้แนะนาโปรแกรมที่ชื่อ TortoiseSVN
+     เริ่มจากเลือกใช้งาน SVN Client ที่ต้องการ ในที่นี้แนะนำโปรแกรมที่ชื่อ TortoiseSVN
 
 โดยสามารถดาว์นโหลดได้ที่ลิงค์นี้ http://tortoisesvn.net/downloads
 
 หลังจากติดตั้งเสร็จแล้วมาทดลองใช้ Google SVN Server ผ่าน SVN Client 
 
-1.เริ่มจากสร้างไดเรคทอรีสาหรับเก็บข้อมูลของโครงการที่ทาบนเครื่องเสร็จแล้วคลิกขวาเลือกเมนู SVN 
+1.เริ่มจากสร้างไดเรคทอรีสำหรับเก็บข้อมูลของโครงการที่ทำบนเครื่องเสร็จแล้วคลิกขวาเลือกเมนู SVN 
 
-Checkout.. ดังรูปที่
+Checkout.. ดังรูป
 
 <img src="https://sdm53124.googlecode.com/svn/70.png"/>
 
@@ -48,7 +48,7 @@ commit… ดังรูป ซึ่งจะเป็นการส่งข
 
 หากมีอยู่แล้วและมีการเปลี่ยนแปลงไฟล์ ก็จะทำการสร้างเป็นรุ่นใหม่พร้อมกับมีประวัติการเปลียนแปลงให้เรา
 
-เขียนอธิบายด้วย ดังในรูปที่
+เขียนอธิบายด้วย ดังในรูป
 
 <img src="https://sdm53124.googlecode.com/svn/75.png"/>
 
